--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "puppeteer": "^0.10.1",
     "serve-favicon": "~2.4.2"
   }
 }
