--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "get-urls": "^7.0.0",
     "morgan": "~1.8.1",
     "puppeteer": "^0.10.1",
+    "sanitize-filename": "^1.6.1",
     "serve-favicon": "~2.4.2"
   }
 }
