--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-recaptcha": "^2.3.0",
     "get-urls": "^7.0.0",
     "morgan": "~1.8.1",
     "puppeteer": "^0.10.1",
