added flag to contact page

--- a/config.json
+++ b/config.json
@@ -3,6 +3,9 @@
 		"xss":{
 			"name": "flag",
 			"flag" : "DejanWasHere"
+		},
+		"contact" : {
+			"flag": "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 		}
 
 	},
