--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "get-urls": "^7.0.0",
     "morgan": "~1.8.1",
     "puppeteer": "^0.10.2",
+    "request": "^2.81.0",
     "sanitize-filename": "^1.6.1",
     "serve-favicon": "~2.4.2"
   }
