--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-recaptcha": "^2.3.0",
+    "express-session": "^1.15.6",
     "get-urls": "^7.0.0",
     "morgan": "~1.8.1",
     "puppeteer": "^0.10.2",
     "request": "^2.81.0",
     "sanitize-filename": "^1.6.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "svg-captcha": "^1.3.11"
   }
 }
